--- a/Galerie.html
+++ b/Galerie.html
@@ -205,7 +205,7 @@ overflow: hidden;
           <div class="collapse navbar-collapse"  id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="Index.html">Media Digitală</a>
+                <a class="nav-link" href="index.html">Media Digitală</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Descriere-cursuri.html">Descriere cursuri</a>
