--- a/Intrebari-frecvente.html
+++ b/Intrebari-frecvente.html
@@ -254,7 +254,7 @@ margin: 0 5px;
           <div class="collapse navbar-collapse"  id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="Index.html">Media Digitală</a>
+                <a class="nav-link" href="index.html">Media Digitală</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Descriere-cursuri.html">Descriere cursuri</a>
