--- a/index.html
+++ b/index.html
@@ -419,6 +419,22 @@ z-index: -99999;
     .img-motive {
         display: none;
     }
+
+    .lumina-neon-stanga {
+    
+    -webkit-box-shadow:0px 0px 43px 12px rgba(255,0,221,0.9);
+    -moz-box-shadow: 0px 0px 43px 12px rgba(255,0,221,0.9);
+    box-shadow: 0px 0px 43px 12px rgba(255,0,221,0.9);
+    z-index: 0;
+}
+
+.lumina-neon-dreapta {
+    
+    -webkit-box-shadow:0px 0px 43px 12px rgba(34,141,255,0.9);
+-moz-box-shadow: 0px 0px 43px 12px  rgba(34,141,255,0.9);
+box-shadow: 0px 0px 43px 12px  rgba(34,141,255,0.9);
+z-index: 0;
+}
 }
     </style>
 </head>
