--- a/galerie/test.html
+++ b/galerie/test.html
@@ -22,7 +22,7 @@
     
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark container-navbar123" style="background-color: black !important;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo-img" src="./assets/imagini/Logo-UT-SC-RGB-RO.png" alt="" srcset=""></a>
+          <a class="navbar-brand" href="index.html"><img class="logo-img" src="./assets/imagini/Logo-UT-SC-RGB-RO.png" alt="" srcset=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
